# UdacitySelfDrivingCarNanoDegree

./: P1.ipynb  README
Py/: cannyEdgeDetection.py  houghTransform.py  laneHighlight.py  langeAndRegionHighlight.py
Py/Proj1_FindingLanes/P1/: P1.ipynb  README  writeup_template.md
Py/Proj2_TrafficSignClassifier/CNN/: 2dCNN.py
Py/Proj2_TrafficSignClassifier/Miniflow/: miniflow.py
Py/Proj2_TrafficSignClassifier/P2/: Traffic_Sign_Classifier.ipynb  engine.py  metaData.csv
Py/Proj2_TrafficSignClassifier/TensorFlow/: contribMLAlgos.py  customLinearRegressor.py  helloTensorFlow.py
Py/Proj3_BehavioralCloning/ToSubmit/: drive.py  writeup_report.md
Py/Proj4_AdvancedLaneLines/: Advanced_Lane_Detection.ipynb  writeup_template.md
Py/Proj4_AdvancedLaneLines/LaneDetectionApp/: CameraCaliberator.py  LaneDetectionPipeline.py  Line.py  camera_calibration.p  engine.py
Py/Proj4_AdvancedLaneLines/To Submit/: writeup_template.md
Py/Proj5_VehicleDetection/To Submit/: Vehicle_Detection.ipynb  writeup_template.md
Py/Proj5_VehicleDetection/Vehicle_Detection_Application/: car_svc.p  engine.py  junk.py  sample_flip_image.py  trainSVMFromData.py
Term1/Proj1_FindingLanes/P1/: README  writeup_template.md
Term1/Proj2_TrafficSignClassifier/: Traffic_Sign_Classifier.ipynb
Term1/Scripts/: project1.py
Term2/Proj1_ExtendedKalmanFilter/: CMakeLists.txt  CMakeLists.txt.rej  Project Rubric.md  install-mac.sh
Term2/Proj1_ExtendedKalmanFilter/README/: README.md
Term2/Proj1_ExtendedKalmanFilter/README/Results/: LR_Simulator_Dataset1.txt  LR_Simulator_Dataset1_Q100.txt  LR_Simulator_Dataset1_Qp001_R2.txt  LR_Simulator_Dataset1_RRadar_rho_0.0009_theta0.0009.txt  LR_Simulator_Dataset1_RRadar_rho_0.5_theta0.1.txt  LR_Simulator_Dataset1_RRadar_theta_0.9.txt  LR_Simulator_Dataset1_RRadar_theta_25.txt  LR_Simulator_Dataset2.txt  LR_Simulator_Dataset2_Output.txt  L_Simulator_Dataset1.txt  L_Simulator_Dataset1_RLaser_p001.txt  L_Simulator_Dataset2.txt  R_Simulator_Dataset1.txt
Term2/Proj1_ExtendedKalmanFilter/data/: output.txt  output_t2.txt
Term2/Proj1_ExtendedKalmanFilter/src/: ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.h  KalmanFilter.cpp  KalmanFilter.h  SensorFusionApplication.cpp  SensorFusionApplication.h  main.cpp
Term2/Proj1_ExtendedKalmanFilter/src/Data/: #include ".:LaserStateAdapterStrategy.h"  LaserMeasurement.cpp  LaserMeasurement.h  LaserStateAdapterStrategy.cpp  LaserStateAdapterStrategy.h  Measurement.h  RadarMeasurement.cpp  RadarMeasurement.h  RadarStateAdapterStrategy.cpp  RadarStateAdapterStrategy.h  State.cpp  State.h  StateAdapterStrategy.h  StateAdapterStrategyFactory.cpp  StateAdapterStrategyFactory.h
Term2/Proj1_ExtendedKalmanFilter/src/DataUtils/: DataAdapter.cpp  DataAdapter.h  DataReader.cpp  DataReader.h  DataReaderFactory.cpp  DataReaderFactory.h  DataTypes.h  FileReader.cpp  FileReader.h  InputParser.cpp  InputParser.h  Utils.cpp  Utils.h  WebClientReader.cpp  WebClientReader.h
Term2/Proj2_UnscentedKalmanFilter/: CMakeLists.txt  Project Rubric.md  PsuedoCode.h  Resubmission - Results.md
Term2/Proj3_Kidnapped_Vehicle/: ProjectRubric.md
Term2/Proj4_PIDController/: CMakeLists.txt  README.md
Term2/Proj5_MPC/: ProjectRubric.md
mytrialFolder/: dirList.py
(+120 files in other folders)
